# notes

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  TODO.md  _ci.sh  _run.sh  _test.sh  run.sh  test.sh
.gitlab/ci-image/: Dockerfile  build-push.sh
example-repo/: .template.md  README.md  a.md  b.md
example-repo/a/: aa.md  ab.md
example-repo/a/a/: aaa.md  aab.md
example-repo/b/: bb.md
src/: banners.rs  cli_format.rs  command_handler.rs  command_parser.rs  config.rs  console_output.rs  default_error.rs  env.rs  git.rs  lib.rs  logger.rs  main.rs  note.rs  repository.rs  search_match.rs  shell.rs  test_env.rs  usage.rs
test/assets/: sample-repo.tar
tests/: integration_test.rs
tests/assets/: fake_editor.sh
