[package]
edition = "2018"
name = "notes"
version = "0.1.9"
authors = ["Rémi Passmoilesel <r.passmoilesel@protonmail.com>"]
description = "A simple tool for taking notes. Work in progress. See: https://github.com/remipassmoilesel/notes"
license = "GPL-3.0-or-later"
repository = "https://github.com/remipassmoilesel/notes.git"

[dependencies]
serde = "1.0.102"
colored = "1.8.0"
dirs = "2.0.2"
chrono = "0.4.9"
regex = "1.3.1"
lazy_static = "1.4.0"
clap = "2.33.0"

[dev-dependencies]
mockall = "0.7.2"