[package]
edition = "2018"
name = "notes"
version = "0.2.106"
authors = ["Rémi Passmoilesel <r.passmoilesel@protonmail.com>"]
description = "A simple tool for taking notes. Work in progress. See: https://gitlab.com/remipassmoilesel/notes"
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://gitlab.com/remipassmoilesel/notes.git"
exclude = [
    "dir/**"
]

[dependencies]
serde = "1.0.115"
colored = "1.8.0"
dirs = "2.0.2"
chrono = "0.4.9"
regex = "1.3.1"
lazy_static = "1.4.0"
clap = "2.33.0"
walkdir = "2"
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
mockall = "0.7.2"
